--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "contacts",
+  "name": "myapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "start:dev": "nodemon index.js",
+    "dev-watch": "nodemon index.js",
+    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "yargs": "^17.7.2"
+    "chalk": "^5.3.0",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.3"
   }
 }
