--- a/user-app/package.json
+++ b/user-app/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "managetask",
+  "name": "users",
   "version": "1.0.0",
-  "description": "a simple task manager",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "start:dev": "nodemon index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module",
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.3.0",
-    "inquirer": "^9.2.14",
+    "express": "^4.18.2",
     "nodemon": "^3.0.3"
   }
 }
