--- a/enviroment/package.json
+++ b/enviroment/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "data-transfer",
+  "name": "enviroment",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^3.0.3"
+    "dotenv": "^16.4.5"
   }
 }
