--- a/logging/package.json
+++ b/logging/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "users",
+  "name": "logging",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^3.0.3"
+    "morgan": "^1.10.0"
   }
 }
